Ajusta e-mail de finalização de cadastro

--- a/packages/email-service/src/providers/MailTemplateProvider/views/complete_register.hbs
+++ b/packages/email-service/src/providers/MailTemplateProvider/views/complete_register.hbs
@@ -8,7 +8,7 @@
 </style>
 
 <div class="message-content">
-  <p>Olá, seja bem-vindo ao Event Manager</p>
+  <p>Olá {{userName}}, seja bem-vindo ao Event Manager</p>
   <p>Para concluir o seu cadastro em nossa plataforma, utilize o link abaixo:</p>
   <p>
     <a href="{{link}}">Concluir cadastro</a>
